--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,39 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --main-color: #F7F8F8;
+  --main-color-dark: #191A1C;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
+  --color-main: var(--main-color);
+  --color-main-dark: var(--main-color-dark);
+  --color-brand: #55AB26;
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --main-color: #191A1C;
+    --main-color-dark: #F7F8F8;
   }
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background: var(--main-color);
+  color: var(--main-color-dark);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.notification {
+    position: absolute;
+    content: "";
+    top: -4px;
+    right: -6px;
+    width: 12px;
+    height: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
